--- a/SAGE_train.ipynb
+++ b/SAGE_train.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mask R-CNN - Train on Shapes Dataset\n",
+    "# Mask R-CNN - Train on particles dataset\n",
     "\n",
     "\n",
     "This notebook shows how to train Mask RCNN sequentially so that one can train starting with synthetic data, then retrain models on manual segmentations for better performance. \n",
@@ -28,31 +28,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-21 17:00:17.501388: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-08-21 17:00:17.501423: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-08-21 17:00:17.501458: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2025-09-10 11:52:42.617210: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-09-10 11:52:42.617262: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-09-10 11:52:42.619557: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROOT DIR: /home/timd/Desktop/SAGE\n",
-      "Pretrained models dir: /home/timd/Desktop/SAGE/pretrained_models\n",
+      "ROOT DIR: /home/timd/Desktop/githubrepo/SAGE\n",
+      "PRETRAINED MODELS DIRECTORY: /home/timd/Desktop/githubrepo/SAGE/pretrained_models\n",
+      "MODEL DIRECTORY: /home/timd/Desktop/githubrepo/SAGE/logs\n",
+      "Results DIR: /home/timd/Desktop/githubrepo/SAGE/Results\n",
+      "DATA DIR (local disk log saving): /home/timd/Desktop/Data/logs\n",
       "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
       "[Open3D INFO] WebRTC GUI backend enabled.\n",
       "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
-      "sys.prefix: /home/timd/micromamba/envs/maskrcnn-tf2\n",
-      "sys.executable: /home/timd/micromamba/envs/maskrcnn-tf2/bin/python\n",
-      "sys.path: ['/home/timd/micromamba/envs/maskrcnn-tf2/lib/python310.zip', '/home/timd/micromamba/envs/maskrcnn-tf2/lib/python3.10', '/home/timd/micromamba/envs/maskrcnn-tf2/lib/python3.10/lib-dynload', '', '/home/timd/.local/lib/python3.10/site-packages', '/home/timd/micromamba/envs/maskrcnn-tf2/lib/python3.10/site-packages', '/home/timd/Desktop/maskrcnn', '/home/timd/.local/lib/python3.10/site-packages/IPython/extensions', '/home/timd/.ipython', '/home/timd/Desktop/SAGE', '/home/timd/Desktop']\n",
-      "mrcnn directory: /home/timd/Desktop/SAGE/mrcnn\n",
-      "Path to model.py: /home/timd/Desktop/SAGE/mrcnn/model.py\n",
-      "MODEL DIRECTORY: /home/timd/Desktop/SAGE/logs\n",
-      "Pretrained models dir: /home/timd/Desktop/SAGE/pretrained_models\n",
-      "Results DIR: /home/timd/Desktop/SAGE/Results\n",
-      "COCO MODEL PATH: /home/timd/Desktop/SAGE/mask_rcnn_coco.h5\n",
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
+      "mrcnn directory: /home/timd/Desktop/githubrepo/SAGE/mrcnn\n",
+      "Path to model.py: /home/timd/Desktop/githubrepo/SAGE/mrcnn/model.py\n",
+      "Downloading pretrained model to /home/timd/Desktop/githubrepo/SAGE/mask_rcnn_coco.h5 ...\n",
+      "... done downloading pretrained model!\n",
+      "COCO MODEL PATH: /home/timd/Desktop/githubrepo/SAGE/mask_rcnn_coco.h5\n"
      ]
     }
    ],
@@ -61,39 +58,60 @@
     "#       so some of these imports dont have to be shown every time\n",
     "\n",
     "import os\n",
-    "\n",
+    "import warnings\n",
+    "import sys\n",
     "# Set which GPU to use dynamically (e.g., \"4\" for GPU 4)\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
-    "#os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'  # Suppresses WARNING and INFO logs, shows only ERRORs\n",
-    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"2\"  # Must be before importing TensorFlow\n",
+    "# Suppress WARNING and INFO logs, shows only ERRORs\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"2\"   \n",
     "\n",
-    "import warnings\n",
+    "#Supress model state warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\", message=\".*Model.state_updates.*\")\n",
-    "%load_ext tensorboard\n",
+    "\n",
+    "\n",
     "import tensorflow as tf\n",
+    "# Uncomment for debugging/TF build\n",
+    "# print(\"TensorFlow version:\", tf.__version__)\n",
+    "# print(\"Built with CUDA:\", tf.test.is_built_with_cuda())\n",
+    "# print(\"GPU Available:\", tf.config.list_physical_devices('GPU'))\n",
     "\n",
-    "\n",
-    "import sys\n",
-    "import random\n",
-    "import math\n",
-    "import re\n",
-    "import time\n",
+    "#==============================================================\n",
+    "# CORE Libraries\n",
+    "#==============================================================\n",
+    "#TODO - clean u unused importeds that are now in other .py files or make single __init__.py file\n",
+    "import random, math, re, time, csv, tempfile\n",
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from tqdm.notebook import tqdm\n",
-    "from IPython.display import clear_output, display\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "#==============================================================\n",
+    "#  PROJECT DIRECTORIES\n",
+    "#==============================================================\n",
+    "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.path.abspath(\"../SAGE\")\n",
-    "\n",
     "print(\"ROOT DIR:\", ROOT_DIR)\n",
     "\n",
+    "#Subdirectores:\n",
+    "PRETRAIN_DIR = os.path.join(ROOT_DIR,\"pretrained_models\") #Pretrained models folder, where models already trained (by us) are stored\n",
+    "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\") # Directory to save logs and trained model\n",
+    "Results_DIR = os.path.join(ROOT_DIR, \"Results\") # Directory to save results (images, etc)\n",
+    "#TODO: remove for final version?\n",
+    "DATA_DIR = os.path.abspath(os.path.join(ROOT_DIR, \"../../Data/logs\")) # Using this to save models into for storage on disk \n",
     "\n",
-    "#Pretrained models folder, where models already trained are stored\n",
-    "PRETRAIN_DIR = os.path.join(ROOT_DIR,\"pretrained_models\")\n",
-    "print(\"Pretrained models dir:\", PRETRAIN_DIR)\n",
+    "print(\"PRETRAINED MODELS DIRECTORY:\", PRETRAIN_DIR)\n",
+    "print(\"MODEL DIRECTORY:\", MODEL_DIR)\n",
+    "print(\"Results DIR:\", Results_DIR)\n",
+    "print(\"DATA DIR (local disk log saving):\", DATA_DIR) \n",
     "\n",
+    "#==============================================================\n",
+    "#  MASK RCNN SETUP\n",
+    "#==============================================================\n",
     "\n",
     "# Import Mask RCNN\n",
     "sys.path.append(ROOT_DIR)  # To find local version of the library\n",
@@ -102,41 +120,15 @@
     "import mrcnn.model as modellib\n",
     "from mrcnn import visualize\n",
     "from mrcnn.model import log\n",
-    "\n",
-    "\n",
-    "\n",
-    "from mrcnn.callbacks import MeanAveragePrecisionCallback\n",
-    "\n",
-    "\n",
-    "\n",
-    "from mrcnn.callbacks import TrainingLogger\n",
     "from mrcnn.utils import print_verbose\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"sys.prefix:\",sys.prefix)\n",
-    "print(\"sys.executable:\",sys.executable)\n",
-    "print(\"sys.path:\", sys.path)\n",
-    "%matplotlib inline \n",
     "\n",
     "mrcnn_dir = os.path.dirname(modellib.__file__)\n",
     "model_file_path = os.path.join(mrcnn_dir,'model.py')\n",
     "print(\"mrcnn directory:\",mrcnn_dir)\n",
     "print(\"Path to model.py:\", model_file_path)\n",
     "\n",
-    "# Directory to save logs and trained model\n",
-    "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\")\n",
-    "print(\"MODEL DIRECTORY:\", MODEL_DIR)\n",
     "\n",
-    "#Pretrained models folder, where models already trained are stored\n",
-    "PRETRAIN_DIR = os.path.join(ROOT_DIR,\"pretrained_models\")\n",
-    "print(\"Pretrained models dir:\", PRETRAIN_DIR)\n",
-    "\n",
-    "\n",
-    "Results_DIR = os.path.join(ROOT_DIR, \"Results\")\n",
-    "print(\"Results DIR:\", Results_DIR)\n",
-    "\n",
-    "# Local path to trained weights file\n",
+    "# ENSURE COCO weights are available\n",
     "COCO_MODEL_PATH = os.path.join(ROOT_DIR, \"mask_rcnn_coco.h5\")\n",
     "# Download COCO trained weights from Releases if needed\n",
     "if not os.path.exists(COCO_MODEL_PATH):\n",
@@ -144,11 +136,20 @@
     "    \n",
     "print(\"COCO MODEL PATH:\", COCO_MODEL_PATH)\n",
     "\n",
+    "#import callbacks\n",
+    "from mrcnn.callbacks import MeanAveragePrecisionCallback\n",
+    "from mrcnn.callbacks import TrainingLogger\n",
+    "\n",
+    "# Print out some useful info about the environment --- IGNORE ---\n",
+    "#print(\"sys.prefix:\",sys.prefix)\n",
+    "#print(\"sys.executable:\",sys.executable)\n",
+    "#print(\"sys.path:\", sys.path)\n",
+    "%matplotlib inline \n",
+    "\n",
     "\n",
     "#import tensorboard stuff\n",
     "%load_ext tensorboard\n",
-    "import tensorflow as tf\n",
-    "import datetime\n",
+    "\n",
     "\n"
    ]
   },
@@ -359,6 +360,8 @@
     "                          config=config,\n",
     "                          model_dir=DATA_DIR #switch to MODEL_DIR for push\n",
     "                          )\n",
+    "\n",
+    "\n",
     "\n",
     "# Which weights to start with?\n",
     "init_with = \"manual\"  # imagenet, coco, last, or manual \n",
@@ -659,207 +662,6 @@
     "    cumulative_epochs += stage_epochs\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create model in training mode\n",
-    "model = modellib.MaskRCNN(mode=\"training\", config=config,\n",
-    "                          model_dir=MODEL_DIR)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Train the head branches\n",
-    "# Passing layers=\"heads\" freezes all layers except the head\n",
-    "# layers. You can also pass a regular expression to select\n",
-    "# which layers to train by name pattern.\n",
-    "#model.train(cluster_dataset_train, cluster_dataset_val, \n",
-    "#            learning_rate=config.LEARNING_RATE, \n",
-    "#            epochs=100, \n",
-    "#            layers='heads')\n",
-    "\n",
-    "#get epoch that it stopped at\n",
-    "model.train(dataset_train, dataset_val, \n",
-    "            learning_rate=config.LEARNING_RATE, \n",
-    "            epochs=2, \n",
-    "            layers='heads',\n",
-    "            )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Fine tune all layers\n",
-    "# Passing layers=\"all\" trains all layers. You can also \n",
-    "# pass a regular expression to select which layers to\n",
-    "# train by name pattern.\n",
-    "\n",
-    "#model.train(cluster_dataset_train, cluster_dataset_val, \n",
-    "  #          learning_rate=config.LEARNING_RATE / 5, #changed to /5\n",
-    "   #         epochs=200, \n",
-    "    #        layers=\"all\")\n",
-    "model.train(dataset_train, dataset_val, \n",
-    "            learning_rate=config.LEARNING_RATE / 10, #changed to /5\n",
-    "            epochs=4, \n",
-    "            layers=\"all\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = model.find_last()\n",
-    "print(name)\n",
-    "model_name=name.partition('/logs/')[2]\n",
-    "print(model_name)\n",
-    "folder_name = model_name.split(os.sep)[0]\n",
-    "print(folder_name)\n",
-    "\n",
-    "save_displayed_config(config,log_dir = path, train_path = dataset_train.particle_masks_dir, val_path =dataset_val.particle_masks_dir )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we repeat the same process with the 2nd set of manual segmentations, D2e1_train, and D2e1_val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#if you want to give it a specific path to train from:\n",
-    "manual_path = os.path.join(DATA_DIR, \"logs/coco_M1e1_part/mask_rcnn_spectra_0034.h5\")\n",
-    "\n",
-    "init_with = \"last\"  # imagenet, coco, or last\n",
-    "\n",
-    "\n",
-    "if init_with ==\"manual\":\n",
-    "    #load the weights from specified path\n",
-    "    model.load_weights(manual_path, by_name=True)\n",
-    "\n",
-    "elif init_with == \"last\":\n",
-    "    # Load the last model you trained and continue training\n",
-    "    model.load_weights(model.find_last(), by_name=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_loaded_datasets(datasets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create model in training mode\n",
-    "model = modellib.MaskRCNN(mode=\"training\", config=config,\n",
-    "                          model_dir=MODEL_DIR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train the head branches\n",
-    "# Passing layers=\"heads\" freezes all layers except the head\n",
-    "# layers. You can also pass a regular expression to select\n",
-    "# which layers to train by name pattern.\n",
-    "#model.train(cluster_dataset_train, cluster_dataset_val, \n",
-    "#            learning_rate=config.LEARNING_RATE, \n",
-    "#            epochs=100, \n",
-    "#            layers='heads')\n",
-    "\n",
-    "#get epoch that it stopped at\n",
-    "model.train(dataset_train, dataset_val, \n",
-    "            learning_rate=config.LEARNING_RATE, \n",
-    "            epochs=100, \n",
-    "            layers='heads',\n",
-    "            )\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fine tune all layers\n",
-    "# Passing layers=\"all\" trains all layers. You can also \n",
-    "# pass a regular expression to select which layers to\n",
-    "# train by name pattern.\n",
-    "\n",
-    "#model.train(cluster_dataset_train, cluster_dataset_val, \n",
-    "  #          learning_rate=config.LEARNING_RATE / 5, #changed to /5\n",
-    "   #         epochs=200, \n",
-    "    #        layers=\"all\")\n",
-    "model.train(dataset_train, dataset_val, \n",
-    "            learning_rate=config.LEARNING_RATE / 10, #changed to /5\n",
-    "            epochs=200, \n",
-    "            layers=\"all\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = model.find_last()\n",
-    "print(name)\n",
-    "model_name=name.partition('/logs/')[2]\n",
-    "print(model_name)\n",
-    "folder_name = model_name.split(os.sep)[0]\n",
-    "print(folder_name)\n",
-    "\n",
-    "save_displayed_config(config,log_dir = path, train_path = dataset_train.particle_masks_dir, val_path =dataset_val.particle_masks_dir )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
