Added model downloading and updated readme

--- a/SAGE_ANALYZE.ipynb
+++ b/SAGE_ANALYZE.ipynb
@@ -47,6 +47,11 @@
     "    - `warnings.filterwarnings(\"ignore\", message=\".Model.state_updates.*\")`: suppresses warnings related to state updates for cleaner output\n",
     "\n",
     "It also sets various directories that need to be accessed throughout the notebook, as well as handles necessary package imports\n",
+    "\n",
+    "\n",
+    "At the end of the cell, the code will determine whether the SAGE pretrained models are available (and found in the `pretrained_models` directory). If they have not yet been downloaded, they will be downloaded and extracted from the corresponding release. \n",
+    "\n",
+    "The initial coco weights are also downloaded. \n",
     "\n"
    ]
   },
@@ -54,7 +59,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-09-22 15:44:49.402913: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
+      "ROOT DIR: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork\n",
+      "Pretrained models dir: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/pretrained_models\n",
+      "MODEL_DIR:  /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/logs\n",
+      "Results DIR: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/Results\n",
+      "DATA DIRECTORY: /media/Data/Data/Tim/Desktop/Data/logs\n",
+      "mrcnn directory: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/mrcnn\n",
+      "Path to model.py: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/mrcnn/model.py\n",
+      "SAGE PRETRAINED MODELS ALREADY AVAILABLE\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import warnings\n",
@@ -101,7 +131,7 @@
     "# Project Directory Setup\n",
     "\n",
     "# Root directory of the project\n",
-    "ROOT_DIR = os.path.abspath(\"../SAGE\")\n",
+    "ROOT_DIR = os.path.abspath(\"../SAGE-fork\")\n",
     "print(\"ROOT DIR:\", ROOT_DIR)\n",
     "\n",
     "# Subdirectories\n",
@@ -135,13 +165,17 @@
     "print(\"mrcnn directory:\",mrcnn_dir)\n",
     "print(\"Path to model.py:\", model_file_path)\n",
     "\n",
+    "#Check if pretrained models are available\n",
+    "if not os.path.exists(PRETRAIN_DIR):\n",
+    "   utils.download_pretrained_models(ROOT_DIR)\n",
+    " \n",
+    "\n",
     "#Ensure COCO weights are available\n",
     "COCO_MODEL_PATH = os.path.join(PRETRAIN_DIR, \"mask_rcnn_coco.h5\")\n",
     "# Download COCO trained weights from Releases if needed\n",
     "if not os.path.exists(COCO_MODEL_PATH):\n",
     "    utils.download_trained_weights(COCO_MODEL_PATH)\n",
     "\n",
-    "#TODO: use similar method for downloading pretrained models/images as COCO?\n",
     "\n",
     "%matplotlib inline \n"
    ]
