--- a/SAGE_train.ipynb
+++ b/SAGE_train.ipynb
@@ -40,14 +40,38 @@
     "    - `warnings.filterwarnings(\"ignore\", message=\".Model.state_updates.*\")`: suppresses warnings related to state updates for cleaner output\n",
     "\n",
     "\n",
-    "It also sets various directories that need to be accessed throughout the notebook, as well as handles necessary package imports\n"
+    "It also sets various directories that need to be accessed throughout the notebook, as well as handles necessary package imports\n",
+    "\n",
+    "At the end of the cell, the code will determine whether the SAGE pretrained models are available (and found in the `pretrained_models` directory). If they have not yet been downloaded, they will be downloaded and extracted from the corresponding release. \n",
+    "\n",
+    "The initial coco weights are also downloaded. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROOT DIR: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork\n",
+      "PRETRAINED MODELS DIRECTORY: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/pretrained_models\n",
+      "MODEL DIRECTORY: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/logs\n",
+      "Results DIR: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/Results\n",
+      "DATA DIR (local disk log saving): /media/Data/Data/Tim/Desktop/Data/logs\n",
+      "mrcnn directory: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/mrcnn\n",
+      "Path to model.py: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/mrcnn/model.py\n",
+      "PRETRAINED MODELS ALREADY AVAILABLE\n",
+      "Downloading pretrained model to /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/pretrained_models/mask_rcnn_coco.h5 ...\n",
+      "... done downloading pretrained model!\n",
+      "COCO MODEL PATH: /media/Data/Data/Tim/Desktop/githubrepo/SAGE-fork/pretrained_models/mask_rcnn_coco.h5\n",
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -88,20 +112,19 @@
     "#==============================================================\n",
     "\n",
     "# Root directory of the project\n",
-    "ROOT_DIR = os.path.abspath(\"../SAGE\")\n",
+    "ROOT_DIR = os.path.abspath(\"../SAGE-fork\")\n",
     "print(\"ROOT DIR:\", ROOT_DIR)\n",
     "\n",
     "#Subdirectores:\n",
     "PRETRAIN_DIR = os.path.join(ROOT_DIR,\"pretrained_models\") #Pretrained models folder, where models already trained (by us) are stored\n",
     "MODEL_DIR = os.path.join(ROOT_DIR, \"logs\") # Directory to save logs and trained model\n",
     "Results_DIR = os.path.join(ROOT_DIR, \"Results\") # Directory to save results (images, etc)\n",
-    "#TODO: remove for final version\n",
-    "DATA_DIR = os.path.abspath(os.path.join(ROOT_DIR, \"../../Data/logs\")) # Using this to save models into for storage on disk \n",
+    "\n",
     "\n",
     "print(\"PRETRAINED MODELS DIRECTORY:\", PRETRAIN_DIR)\n",
     "print(\"MODEL DIRECTORY:\", MODEL_DIR)\n",
     "print(\"Results DIR:\", Results_DIR)\n",
-    "print(\"DATA DIR (local disk log saving):\", DATA_DIR) \n",
+    "\n",
     "\n",
     "#==============================================================\n",
     "#  MASK RCNN SETUP\n",
@@ -122,11 +145,15 @@
     "print(\"Path to model.py:\", model_file_path)\n",
     "\n",
     "\n",
-    "# ENSURE COCO weights are available\n",
+    "#Check if pretrained models are available\n",
+    "if not os.path.exists(PRETRAIN_DIR):\n",
+    "   utils.download_pretrained_models(ROOT_DIR)\n",
+    "\n",
+    "#ENSURE COCO weights are available\n",
     "COCO_MODEL_PATH = os.path.join(PRETRAIN_DIR, \"mask_rcnn_coco.h5\")\n",
     "# Download COCO trained weights from Releases if needed\n",
     "if not os.path.exists(COCO_MODEL_PATH):\n",
-    "    utils.download_trained_weights(COCO_MODEL_PATH)\n",
+    "   utils.download_trained_weights(COCO_MODEL_PATH)\n",
     "    \n",
     "print(\"COCO MODEL PATH:\", COCO_MODEL_PATH)\n",
     "\n",
@@ -357,20 +384,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO-remove DATA_DIR for actual push\n",
-    "DATA_DIR = os.path.abspath(os.path.join(ROOT_DIR, \"../../Data/logs\"))\n",
-    "print(\"DATA DIRECTORY:\", DATA_DIR)\n",
     "\n",
     "# Create model in training mode\n",
     "model = modellib.MaskRCNN(mode=\"training\", \n",
     "                          config=config,\n",
-    "                          model_dir=DATA_DIR #switch to MODEL_DIR for push\n",
+    "                          model_dir=MODEL_DIR#switch to MODEL_DIR for push\n",
     "                          )\n",
     "\n",
     "\n",
     "\n",
     "# Which weights to start with?\n",
-    "init_with = \"manual\"  # imagenet, coco, last, or manual \n",
+    "init_with = \"coco\"  # imagenet, coco, last, or manual \n",
     "\n",
     "#if you want to give it a specific path to train from:\n",
     "manual_path = os.path.join(PRETRAIN_DIR, \"SAGE_0/SAGE_0.h5\") #pretrained directory holds models provided in work. \n",
@@ -672,7 +696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "maskrcnn-tf2",
+   "display_name": "SAGE-gpu-env",
    "language": "python",
    "name": "python3"
   },
@@ -686,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
